        - Added a getChildren method.
    Entity:
        - Moved the registerRelation and removeRelation methods to the
          Relatable interface.
        - Added compareTo method.
        - Added getEntityChildren method.
        - Added setParent method.

    RatedRelation:

    Relation:

    -- Created the Relatable interface.
    Relatable:
        - Added

Entity Classes:
    Argument:
        - Wrote an equals method.
        - Removed the registerRelation and removeRelation methods.
        - Added a default constructor.
    Idea:
        - Wrote an equals method.
        - Added a default constructor.

    Library:
        - Wrote the equals method.
        - Added a default constructor.

    Note:
        - Wrote the equals method.
        - Changed getChildren to getEntityChildren.
        - Added a default constructor.
    RefArg:

    Reference:
        - Wrote the equals method.
        - Added code for generating MLA and APA citations.
        - Added a default constructor.
    RefIdea:

    Theme:
        - Wrote the equals method.
        - Added a default constructor.
    Topic:
        - Wrote the equals method.
        - Removed the registerRelation and removeRelation methods.
        - Changed getChildren to getEntityChildren.
        - Changed addTheme to registerChild.
        - Changed deleteTheme to removeChild.

    Other Comments:
        Removed the add method from all entity classes, now they all inherit
        registerChild from Editable. This is also true of the remove methods,
        they now all implement removeChild.
        - Added a default constructor.
        - Removed each class's child list and moved it to Editable
Management:
    RefMeisterExec:
        Rewrote main()
        Supports specifying directory via command-line

XML:
    MalformedXMLException:

    Saveable:

    XMLManager:

    XMLParser:

Other:
    - Every Instance of Editable changed to an instance of Entity
    - Remove Setters for Lists