@@ -1,5 +1,8 @@
 package refmeister.entity.Interfaces;
 
+
+import java.util.List;
+
 /**
  * This interface defines methods which must be implemented for the display of the program.
  * Currently only gets a String array for printing to the command line.
@@ -14,6 +17,7 @@ public interface Displayable {
 
 	String getAttribute(String attribute);
 	void setAttribute(String attribute, String contents);
-	String[] listOptions();
+	List<String> listOptions();
+    List<String> listAttributes();
 
 	}
